tests/compiler/asiReturn/index.ts
// This should be an error for using a return outside a function, but ASI should work properly
return  //~ERROR: A 'return' statement can only be used within a function body.